fix java in docker